[gd_scene load_steps=3 format=2]

[ext_resource path="res://PowerUp.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 20.1757

[node name="PowerUp" type="Area2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="DebugTTL" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="EffectDurationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AvailabilityTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="RespawnCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_PowerUp_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="EffectDurationTimer" to="." method="_on_EffectDurationTimer_timeout"]
[connection signal="timeout" from="AvailabilityTimer" to="." method="_on_AvailabilityTimer_timeout"]
[connection signal="timeout" from="RespawnCooldown" to="." method="_on_RespawnCooldown_timeout"]
